fix: fix visualization layout problem on mobile

--- a/src/app/visualization/page.module.css
+++ b/src/app/visualization/page.module.css
@@ -3,5 +3,4 @@
   flex-flow: row wrap;
   justify-content: space-evenly;
   align-items: baseline;
-  padding-inline: 4rem;
 }
